--- a/.env
+++ b/.env
@@ -1,24 +1,13 @@
 APP_ENV=local
 APP_DEBUG=true
 
-
-
 MASTER_HOST='127.0.0.1'
-MASTERDB_USERNAME="root"
-MASTERDB_PASSWORD="Jacky1213"
+MASTERDB_USERNAME="rjacky1213"
+MASTERDB_PASSWORD="!QAZxsw2"
 
 SLAVE_HOST='127.0.0.1'
-SLAVEDB_USERNAME="root"
-SLAVEDB_PASSWORD="Jacky1213"
-
-FESTIVAL_M_HOST='localhost'
-FESTIVALDB_M_USERNAME="invoicing_doctor"
-FESTIVALDB_M_PASSWORD="J9hdExQw5VC$"
-
-FESTIVAL_S_HOST='localhost'
-FESTIVALDB_S_USERNAME="invoicing_doctor"
-FESTIVALDB_S_PASSWORD="J9hdExQw5VC$"
-
+SLAVEDB_USERNAME="rjacky1213"
+SLAVEDB_PASSWORD="!QAZxsw2"
 
 CACHE_DRIVER=redis
 QUEUE_DRIVER=sync
